--- a/ProjectDisbatch.API/appsettings.Development.json
+++ b/ProjectDisbatch.API/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:24049",
+          "https://localhost:44354",
+          "http://localhost:5231",
+          "https://localhost:7158"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
